<resources>
    <string name="app_name">ArcClimbing</string>
    <string name="sign_out">Sign Out</string>
    <string name="user_profile">Profile</string>
    <string name="bar_number_title">Bar No:</string>
    <string name="grade">Grade:</string>
    <string name="colour">Colour:</string>
    <string name="removed">Stripped:</string>
    <string name="set">Created:</string>
    <string name="setter">Set By:</string>
    <string name="status">Status:</string>
    <string name="edit">Edit</string>
    <string name="save">Save Changes</string>
    <string name="setterName">Setter Name</string>
    <string name="routeName">Route Name</string>
    <string name="removedDate">Removed Date</string>
    <string name="setDate">Set Date</string>
    <string name="gradeVal">Route\'s Grade</string>
    <string name="barNumber">Bar No.</string>
    <string name="routeStatus">Status</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="about">About</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="app_logo">Logo of the App</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="user_id">User ID:</string>
    <string name="day">Day Mode</string>
    <string name="toggle">Toggle Theme</string>
    <string name="add">Add</string>
    <string name="profile_pic">Profile Pic</string>

</resources>