<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_user_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/user_profile"/>

    <item
        android:id="@+id/nav_dark_mode"
        android:icon="@drawable/ic_dark"
        android:title="@string/dark_mode"
        app:actionLayout="@layout/layout_switch"/>

    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_about"
        android:title="@string/about"/>

    <item
        android:id="@+id/nav_sign_out"
        android:icon="@drawable/ic_sign_out"
        android:title="@string/sign_out"/>

</menu>