<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".RouteDetailsActivity">

    <TextView
        android:id="@+id/routeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Text View"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/routeSetter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/setter"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:padding="@dimen/mediumPadding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/routeSetterName"
        app:layout_constraintTop_toBottomOf="@id/routeName" />

    <TextView
        android:id="@+id/routeSetterName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Text View"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:padding="@dimen/mediumPadding"
        app:layout_constraintStart_toEndOf="@id/routeSetter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/routeName" />

    <TextView
        android:id="@+id/routeStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:padding="@dimen/mediumPadding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/routeStatusVal"
        app:layout_constraintTop_toBottomOf="@id/routeSetter" />

    <TextView
        android:id="@+id/routeStatusVal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Text View"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:padding="@dimen/mediumPadding"
        app:layout_constraintStart_toEndOf="@id/routeStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/routeSetterName" />

    <TextView
        android:id="@+id/barNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/bar_number_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:padding="@dimen/mediumPadding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/barNumberVal"
        app:layout_constraintTop_toBottomOf="@id/routeStatus" />

    <TextView
        android:id="@+id/barNumberVal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Text View"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:padding="@dimen/mediumPadding"
        app:layout_constraintStart_toEndOf="@id/barNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/routeStatusVal" />

    <TextView
        android:id="@+id/grade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/grade"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:padding="@dimen/mediumPadding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gradeVal"
        app:layout_constraintTop_toBottomOf="@id/barNumber" />

    <TextView
        android:id="@+id/gradeVal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Text View"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:padding="@dimen/mediumPadding"
        app:layout_constraintStart_toEndOf="@id/grade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barNumberVal" />

    <TextView
        android:id="@+id/colour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/colour"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:padding="@dimen/mediumPadding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/colourVal"
        app:layout_constraintTop_toBottomOf="@id/grade" />

    <TextView
        android:id="@+id/colourVal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Text View"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:padding="@dimen/mediumPadding"
        app:layout_constraintStart_toEndOf="@id/colour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gradeVal" />

    <TextView
        android:id="@+id/setDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/set"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:padding="@dimen/mediumPadding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/setDateVal"
        app:layout_constraintTop_toBottomOf="@id/colour" />

    <TextView
        android:id="@+id/setDateVal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Text View"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:padding="@dimen/mediumPadding"
        app:layout_constraintStart_toEndOf="@id/setDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/colourVal" />

    <TextView
        android:id="@+id/removedDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/removed"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:padding="@dimen/mediumPadding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/removedDateVal"
        app:layout_constraintTop_toBottomOf="@id/setDate" />

    <TextView
        android:id="@+id/removedDateVal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Text View"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:padding="@dimen/mediumPadding"
        app:layout_constraintStart_toEndOf="@id/removedDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setDateVal" />

    <Button
        android:id="@+id/editRoute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>